Try to run github action tests